Fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -994,13 +994,13 @@ h2 {
     flex-direction: column;
     align-items: center;
     width: 400px;
-    margin-left: 620px;
+    margin-left: 640px;
   }
 
   .modal-button {
     display: flex;
     margin-top: 20px;
-    gap: 15px;
+    gap: 19px;
     overflow: hidden;
   }
 
